--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,6 @@
 
 
-#Jobs {
-    /*Let the writing be highlighted*/
-    background-color: #f5f5f5;
-    padding: 20px;
-    margin: 20px;
 
-
-}
 .table {
     width: 100%;
     border-collapse: collapse;
@@ -93,4 +86,50 @@
 .links a:hover {
     color: #ff5722;
 }
+.backPicWeb {
+    position: relative;
+}
+
+.picWeb {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    z-index: -1;
+
+}
+
+.display-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;}
+
+#Jobs {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+
+
+}
+.name-right-job {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    transition: background-color 0.3s ease-in-out;
+}
+
+
 
