--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,13 @@
     height: 50px;
 }
 
+.job-table td {
+    height: 100px;
+    overflow: auto;
+    padding: 10px;
+    border: 1px solid #ddd;
+}
+
 
 
 
