--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,7 @@
 
 .job-table th,
 .job-table td {
+    min-width: 100px;
     padding: 8px;
     text-align: left;
     word-break: break-word;
@@ -297,4 +298,21 @@
     0% { opacity: 0; }
     10% { transform: translateY(0); opacity: 1; }
     100% { transform: translateY(15px); opacity: 0;}
+}
+
+.labelText{
+    font-size: 1.1em;
+    color: #141427;
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(90, 90, 90, 0.54);
+    margin-bottom: 20px;
+}
+.tdShowSum{
+    font-size: 1.1em;
+    color: #141427;
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(90, 90, 90, 0.54);
+    margin-bottom: 20px;
 }
