--- a/src/App.css
+++ b/src/App.css
@@ -110,10 +110,16 @@
     padding: 8px;
     text-align: left;
     word-break: break-word;
+    /*max-height: 150px; !* Adjust this value to fit your needs *!*/
+    /*overflow: auto;*/
 }
 
 .job-table th {
     background-color: #f2f2f2;
+}
+.job-table ul {
+    max-height: 200px; /* Adjust this value to fit your needs */
+    overflow: auto;
 }
 
 .job-table tr:nth-child(even) {
@@ -315,4 +321,48 @@
     padding: 10px;
     background-color: rgba(90, 90, 90, 0.54);
     margin-bottom: 20px;
+}
+
+.job-information {
+    width: 80%;
+    margin: auto;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.job-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.keywords {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.common-keywords, .missing-keywords, .all-keywords {
+    width: 30%;
+}
+
+.the-right-job {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.name-right-job {
+    text-align: center;
+}
+.job-information-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.links-container {
+    display: flex;
+    justify-content: space-between;
 }
