--- a/src/App.css
+++ b/src/App.css
@@ -346,12 +346,12 @@
     width: 30%;
 }
 
-.the-right-job {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-}
+/*.the-right-job {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    padding: 20px;*/
+/*}*/
 
 .name-right-job {
     text-align: center;
@@ -365,4 +365,62 @@
 .links-container {
     display: flex;
     justify-content: space-between;
+}
+.the-right-job table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.the-right-job table, .the-right-job th, .the-right-job td {
+    border: 1px solid #ddd;
+}
+
+.the-right-job th, .the-right-job td {
+    padding: 15px;
+    text-align: left;
+}
+
+.the-right-job tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+.keywords-container {
+    display: flex;
+    justify-content: space-between;
+}
+.keywords-container div {
+    margin-bottom: 20px;
+}
+
+.keywords-container p {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #333;
+}
+
+.title {
+    font-size: 2em;
+    color: #333;
+}
+
+.job-name {
+    font-size: 1.5em;
+    color: #666;
+}
+
+.keywords {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.common-keywords, .missing-keywords {
+    width: 45%;
+}
+.pOfTheRight {
+    font-size: 1.1em;
+    color: #141427;
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(90, 90, 90, 0.54);
+    margin-bottom: 20px;
 }
