--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: url('./picForCvProj.jpeg');
+    background-image: url('./hoPic.jpeg');
     background-size: cover;
     background-position: center;
     display: flex;
@@ -232,14 +232,13 @@
 }
 
 .buttonApp:hover {
-    background-color: #3e8e41;
-    color: white;
+    background-color: #2c3e50;
+    color: #ecf0f1;
 }
 
 .buttonApp:active {
-    background-color: #3e8e41;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
+    background-color: #2c3e50;
+    color: #ecf0f1;
 }
 .scroll-downs {
     position: absolute;
@@ -424,3 +423,4 @@
     background-color: rgba(90, 90, 90, 0.54);
     margin-bottom: 20px;
 }
+
