--- a/src/styles/CheckLocalJobDescription.css
+++ b/src/styles/CheckLocalJobDescription.css
@@ -12,16 +12,25 @@
     margin-bottom: 20px;
 }
 .CheckLocalJobDescription-textarea {
-    position: absolute;
-    top: 200px;
-    left: 10px;
-    width: 200px;
+    position: fixed;
+    left: 225px;
+    top: 70px;
     height: 100px;
+
 }
 .CheckLocalJobDescription-buttonCheckCustJob {
-    position: absolute;
-    top: 310px;
-    left: 10px;
+    position: fixed;
+    left: 225px;
+    top: 180px;
+    height: 50px;
+    width: 150px;
+    background-color: rgba(90, 90, 90, 0.8);
+    color: #ffffff;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.1em;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
 }
 /*.CheckLocalJobDescription-table {*/
 /*    width: 100%;*/
