--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -712,6 +712,25 @@
     top: 3px;
     left: 210px;
 }
+.App-aboutLogo {
+    position: absolute;
+    top: 30px;
+    left: 640px;
+    width: 36px;
+    height: 36px;
+    transform: translateY(-50%);
+    transition: transform 0.5s ease-in-out;
+}
+.App-aboutLogo:hover {
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.App-buttonApp:hover {
+    cursor: pointer;
+    opacity: 0.7;
+}
+
 
 .App-buttonApp:hover {
     background-color: #2c3e50;
