--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -10,6 +10,8 @@
     color: #fff;
     text-align: center;
     margin-bottom: 20px;
+    background-color: rgb(20, 20, 39);
+
 }
 
 .about-text {
@@ -17,6 +19,7 @@
     color: #fff;
     line-height: 1.6;
     margin-bottom: 20px;
+    background-color: rgb(20, 20, 39);
 }
 
 .about-list {
@@ -26,4 +29,6 @@
     color: #fff;
     line-height: 1.6;
     margin-bottom: 20px;
+    background-color: rgb(20, 20, 39);
+
 }
