--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -741,6 +741,28 @@
     background-color: #2c3e50;
     color: #ecf0f1;
 }
+.App-footer-text {
+    font-size: 1.2em;
+    color: #ffffff;
+    text-shadow: 2px 2px 2px #000000;
+    text-align: center;
+    padding: 20px;
+    background-color: rgba(90, 90, 90, 0.8);
+    margin-bottom: 20px;
+}
+
+.App-footer-link{
+    color: #ffffff;
+    text-shadow: 2px 2px 2px #000000;
+    text-align: center;
+    padding: 20px;
+    background-color: rgba(90, 90, 90, 0.8);
+    margin-bottom: 20px;
+
+
+
+
+}
 
 
 
